--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,10 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="space_tiny">4dp</dimen>
+    <dimen name="space_small">8dp</dimen>
+    <dimen name="space_semi_medium">12dp</dimen>
+    <dimen name="space_medium">16dp</dimen>
+    <dimen name="space_semi_large">20dp</dimen>
+    <dimen name="space_large">24dp</dimen>
+
+    <dimen name="splash_screen_image_size">180dp</dimen>
 </resources>
