--- a/app/src/main/res/layout/layout_user_list_loading.xml
+++ b/app/src/main/res/layout/layout_user_list_loading.xml
@@ -1,60 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.facebook.shimmer.ShimmerFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/userItemShimmer"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/space_small"
-    android:background="@drawable/rounded_border_accent"
-    android:paddingBottom="@dimen/space_medium">
+    android:layout_height="wrap_content">
 
-
-    <View
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@drawable/user_list_item_shimmer_background"
-        app:layout_constraintBottom_toBottomOf="@id/centerOfAvatar"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:layout_width="@dimen/user_avatar_list_border_size"
-        android:layout_height="@dimen/user_avatar_list_border_size"
-        android:background="@drawable/circle_background_accent"
-        app:layout_constraintBottom_toBottomOf="@id/userAvatar"
-        app:layout_constraintEnd_toEndOf="@id/userAvatar"
-        app:layout_constraintStart_toStartOf="@id/userAvatar"
-        app:layout_constraintTop_toTopOf="@id/userAvatar" />
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/space_small"
+        android:background="@drawable/rounded_border_accent"
+        android:paddingBottom="@dimen/space_medium">
 
 
-    <com.github.ybq.android.spinkit.SpinKitView
-        android:id="@+id/userAvatar"
-        android:layout_width="@dimen/user_avatar_list_size"
-        android:layout_height="@dimen/user_avatar_list_size"
-        app:SpinKit_Color="@color/colorPrimary"
-        app:SpinKit_Style="RotatingCircle"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@drawable/user_list_item_shimmer_background"
+            app:layout_constraintBottom_toBottomOf="@id/centerOfAvatar"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/centerOfAvatar"
-        android:layout_width="1dp"
-        android:layout_height="1dp"
-        app:layout_constraintBottom_toBottomOf="@id/userAvatar"
-        app:layout_constraintEnd_toEndOf="@id/userAvatar"
-        app:layout_constraintStart_toStartOf="@id/userAvatar"
-        app:layout_constraintTop_toTopOf="@id/userAvatar" />
+        <View
+            android:layout_width="@dimen/user_avatar_list_border_size"
+            android:layout_height="@dimen/user_avatar_list_border_size"
+            android:background="@drawable/circle_background_accent"
+            app:layout_constraintBottom_toBottomOf="@id/userAvatar"
+            app:layout_constraintEnd_toEndOf="@id/userAvatar"
+            app:layout_constraintStart_toStartOf="@id/userAvatar"
+            app:layout_constraintTop_toTopOf="@id/userAvatar" />
 
 
-    <com.github.ybq.android.spinkit.SpinKitView
-        style="@style/SpinKitView.ThreeBounce"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/space_large"
-        android:layout_marginTop="@dimen/space_tiny"
-        app:SpinKit_Color="@color/colorAccent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/userAvatar" />
+        <com.github.ybq.android.spinkit.SpinKitView
+            android:id="@+id/userAvatar"
+            android:layout_width="@dimen/user_avatar_list_size"
+            android:layout_height="@dimen/user_avatar_list_size"
+            app:SpinKit_Color="@color/colorPrimary"
+            app:SpinKit_Style="RotatingCircle"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <View
+            android:id="@+id/centerOfAvatar"
+            android:layout_width="1dp"
+            android:layout_height="1dp"
+            app:layout_constraintBottom_toBottomOf="@id/userAvatar"
+            app:layout_constraintEnd_toEndOf="@id/userAvatar"
+            app:layout_constraintStart_toStartOf="@id/userAvatar"
+            app:layout_constraintTop_toTopOf="@id/userAvatar" />
+
+
+        <View
+            style="@style/SpinKitView.ThreeBounce"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/space_large"
+            android:layout_marginStart="@dimen/space_large"
+            android:layout_marginTop="@dimen/space_tiny"
+            android:layout_marginEnd="@dimen/space_large"
+            android:background="@drawable/rounded_shimmer_background"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/userAvatar" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</com.facebook.shimmer.ShimmerFrameLayout>
