--- a/app/src/main/res/layout/activity_search_user.xml
+++ b/app/src/main/res/layout/activity_search_user.xml
@@ -41,17 +41,20 @@
             android:src="@android:drawable/ic_menu_close_clear_cancel" />
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/noResult"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="30dp"
-        android:text="No Result"
-        android:textSize="18pt"
-        android:textStyle="bold"
-        android:visibility="gone"
-        tools:visibility="visible" />
+    <include
+        android:id="@+id/noResultLayout"
+        layout="@layout/layout_no_result"
+        android:visibility="gone" />
+
+    <include
+        android:id="@+id/noInternetLayout"
+        layout="@layout/layout_no_internet"
+        android:visibility="gone" />
+
+    <include
+        android:id="@+id/reachLimitLayout"
+        layout="@layout/layout_api_reach_limit"
+        android:visibility="gone" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/searchResult"
