--- a/app/src/main/res/layout/activity_user_list.xml
+++ b/app/src/main/res/layout/activity_user_list.xml
@@ -7,39 +7,22 @@
     android:orientation="vertical"
     tools:context=".ui.userlist.UserListActivity">
 
-    <TextView
-        android:id="@+id/noResult"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="30dp"
-        android:text="No Result"
-        android:textSize="18pt"
-        android:textStyle="bold"
+    <include layout="@layout/layout_toolbar" />
+
+    <include
+        android:id="@+id/noResultLayout"
+        layout="@layout/layout_no_result"
         android:visibility="gone" />
 
-    <LinearLayout
-        android:id="@+id/noInternet"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="gone"
-        tools:visibility="visible">
+    <include
+        android:id="@+id/noInternetLayout"
+        layout="@layout/layout_no_internet"
+        android:visibility="gone" />
 
-        <ImageView
-            android:layout_width="@dimen/splash_screen_image_size"
-            android:layout_height="@dimen/splash_screen_image_size"
-            android:src="@android:drawable/ic_menu_close_clear_cancel" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/no_internet_title"
-            android:textColor="@color/colorPrimary"
-            android:textSize="14pt" />
-
-    </LinearLayout>
+    <include
+        android:id="@+id/reachLimitLayout"
+        layout="@layout/layout_api_reach_limit"
+        android:visibility="gone" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/userListLayout"
