--- a/app/src/main/res/layout/layout_search_user_item.xml
+++ b/app/src/main/res/layout/layout_search_user_item.xml
@@ -32,6 +32,7 @@
 
     <TextView
         android:id="@+id/searchUserItemName"
+        style="@style/SemiBoldFont"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
