--- a/app/src/main/res/layout/layout_user_list_item.xml
+++ b/app/src/main/res/layout/layout_user_list_item.xml
@@ -49,6 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_tiny"
+        android:textAppearance="@style/RegularFont"
         android:textColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
